# Deckard

./: Cargo.toml  build.sh  readme.md
app_files/: AppIcon.icns  Info.plist
scripts/: make-app.sh
src/: helpers.rs  main.rs  misc.rs  output_phase.rs  search.rs  searcher.rs  searching_phase.rs  startup_phase.rs
