[package]
name = "find-dup-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
homedir = "0.2.1"
rfd = "0.14.1"
magnetic = "2.4.1"
maplit = "1.0.2"
num_cpus = "1.16.0"
walkdir = "2.5.0"
egui_extras = {version = "0.27.2", features = ["default", "all_loaders", "file", "image"]}
image = {version = "0.24", features = ["jpeg"]}
image_hasher = "1.2.0"

